atualizações pictogramas e câmera

--- a/Pictogramas/menu geral/Alimentos/Alimentos.html
+++ b/Pictogramas/menu geral/Alimentos/Alimentos.html
@@ -23,58 +23,58 @@
           <h1 class="Title">Pictogramas - Alimentos</h1>
         </div>
       </div>
-      <ul class="nav-list" id="nav-list">>
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <ul class="nav-list" id="nav-list">
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../ink/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../ink/cam/cam.html">Câmera</a></li>
+      <li><a href="../../../ink/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../ink/calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../ink/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../ink/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../ink/videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Alimentos/Arroz.png" alt="Arroz" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Arroz.png" alt="Arroz" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Alimentos/Bolo.png" alt="Bolo">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Bolo.png" alt="Bolo">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Alimentos/Leite.png" alt="Leite">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Leite.png" alt="Leite">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Alimentos/Maçã.png" alt="Maçã">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Maçã.png" alt="Maçã">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Alimentos/Pão.png" alt="Pão">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Pão.png" alt="Pão">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Alimentos/Queijo.png" alt="Queijo">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Queijo.png" alt="Queijo">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Alimentos/Ovo.png" alt="Ovo">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Ovo.png" alt="Ovo">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Alimentos/Sopa.png" alt="Sopa">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Sopa.png" alt="Sopa">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Alimentos/Salada.png" alt="Salada">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Salada.png" alt="Salada">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Alimentos/Suco.png" alt="Suco">
+      <img src="../../../Pictogramas/Imagens/Alimentos/Suco.png" alt="Suco">
     </div>
 
     </div>
