--- a/Pictogramas/menu geral/Bebidas/Bebidas.html
+++ b/Pictogramas/menu geral/Bebidas/Bebidas.html
@@ -24,41 +24,41 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Bebidas/Água.png" alt="Água" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Água.png" alt="Água" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Bebidas/Achocolatado.png" alt="Achocolatado">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Achocolatado.png" alt="Achocolatado">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Bebidas/Chá.png" alt="Chá">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Chá.png" alt="Chá">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Bebidas/Iogurte.png" alt="Iogurte">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Iogurte.png" alt="Iogurte">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Bebidas/Leite.png" alt="Leite">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Leite.png" alt="Leite">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Bebidas/Refrigerante.png" alt="Refrigerante">
+      <img src="../../../Pictogramas/Imagens/Bebidas/Refrigerante.png" alt="Refrigerante">
     </div>
 
     <div class="card blue">
