--- a/Pictogramas/menu geral/Doces/Doces.html
+++ b/Pictogramas/menu geral/Doces/Doces.html
@@ -24,49 +24,49 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Doces/Bala.png" alt="Bala" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Doces/Bala.png" alt="Bala" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Doces/Biscoito.png" alt="Biscoito">
+      <img src="../../../Pictogramas/Imagens/Doces/Biscoito.png" alt="Biscoito">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Doces/Bolo.png" alt="Bolo">
+      <img src="../../../Pictogramas/Imagens/Doces/Bolo.png" alt="Bolo">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Doces/Cereal.png" alt="Cereal">
+      <img src="../../../Pictogramas/Imagens/Doces/Cereal.png" alt="Cereal">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Doces/Chocolate.png" alt="Chocolate">
+      <img src="../../../Pictogramas/Imagens/Doces/Chocolate.png" alt="Chocolate">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Doces/CupCake.png" alt="CupCake">
+      <img src="../../../Pictogramas/Imagens/Doces/CupCake.png" alt="CupCake">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Doces/Gelatina.png" alt="Gelatina">
+      <img src="../../../Pictogramas/Imagens/Doces/Gelatina.png" alt="Gelatina">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Doces/Pirulito.png" alt="Pirulito">
+      <img src="../../../Pictogramas/Imagens/Doces/Pirulito.png" alt="Pirulito">
     </div>
 
     <div class="card blue">
@@ -74,7 +74,7 @@
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Doces/Sorvete.png" alt="Sorvete">
+      <img src="../../../Pictogramas/Imagens/Doces/Sorvete.png" alt="Sorvete">
     </div>
 
     </div>
