--- a/Pictogramas/menu geral/Dor/Dores.html
+++ b/Pictogramas/menu geral/Dor/Dores.html
@@ -21,36 +21,36 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Dor/Cabeça.png" alt="Cabeça" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Dor/Cabeça.png" alt="Cabeça" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Dor/Garganta.png" alt="Garganta">
+      <img src="../../../Pictogramas/Imagens/Dor/Garganta.png" alt="Garganta">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Dor/Perna.png" alt="Perna">
+      <img src="../../../Pictogramas/Imagens/Dor/Perna.png" alt="Perna">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Dor/Barriga.png" alt="Barriga">
+      <img src="../../../Pictogramas/Imagens/Dor/Barriga.png" alt="Barriga">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Dor/Dente.png" alt="Dente">
+      <img src="../../../Pictogramas/Imagens/Dor/Dente.png" alt="Dente">
     </div>
 
     </div>
