--- a/Pictogramas/menu geral/Emoções/Emocoes.html
+++ b/Pictogramas/menu geral/Emoções/Emocoes.html
@@ -24,93 +24,93 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Felicidade.png" alt="Felicidade" class="card-image">
+      <img src="../../../Pictogramas/Imagens/emoções/Felicidade.png" alt="Felicidade" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Amor.png" alt="Amor">
+      <img src="../../../Pictogramas/Imagens/emoções/Amor.png" alt="Amor">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Ansiedade.png" alt="Ansiedade">
+      <img src="../../../Pictogramas/Imagens/emoções/Ansiedade.png" alt="Ansiedade">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Compaixão.png" alt="Compaixão">
+      <img src="../../../Pictogramas/Imagens/emoções/Compaixão.png" alt="Compaixão">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Cansada.png" alt="Cansada">
+      <img src="../../../Pictogramas/Imagens/emoções/Cansada.png" alt="Cansada">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Confusa.png" alt="Confusa">
+      <img src="../../../Pictogramas/Imagens/emoções/Confusa.png" alt="Confusa">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Constrangimento.png" alt="Constrangimento">
+      <img src="../../../Pictogramas/Imagens/emoções/Constrangimento.png" alt="Constrangimento">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Desespero.png" alt="Desespero">
+      <img src="../../../Pictogramas/Imagens/emoções/Desespero.png" alt="Desespero">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Doente.png" alt="Doente">
+      <img src="../../../Pictogramas/Imagens/emoções/Doente.png" alt="Doente">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Raiva.png" alt="Raiva">
+      <img src="../../../Pictogramas/Imagens/emoções/Raiva.png" alt="Raiva">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Medo.png" alt="Medo">
+      <img src="../../../Pictogramas/Imagens/emoções/Medo.png" alt="Medo">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Tédio.png" alt="Tédio">
+      <img src="../../../Pictogramas/Imagens/emoções/Tédio.png" alt="Tédio">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Surpresa.png" alt="Surpresa">
+      <img src="../../../Pictogramas/Imagens/emoções/Surpresa.png" alt="Surpresa">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Vergonha.png" alt="Vergonha">
+      <img src="../../../Pictogramas/Imagens/emoções/Vergonha.png" alt="Vergonha">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Tristeza.png" alt="Tristeza">
+      <img src="../../../Pictogramas/Imagens/emoções/Tristeza.png" alt="Tristeza">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Nojo.png" alt="Nojo">
+      <img src="../../../Pictogramas/Imagens/emoções/Nojo.png" alt="Nojo">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Relaxada.png" alt="Relaxada">
+      <img src="../../../Pictogramas/Imagens/emoções/Relaxada.png" alt="Relaxada">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/emoções/Gratidão.png" alt="Gratidão">
+      <img src="../../../Pictogramas/Imagens/emoções/Gratidão.png" alt="Gratidão">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/emoções/Inveja.png" alt="Inveja">
+      <img src="../../../Pictogramas/Imagens/emoções/Inveja.png" alt="Inveja">
     </div>
 
     </div>
