--- a/Pictogramas/menu geral/Frutas/Frutas.html
+++ b/Pictogramas/menu geral/Frutas/Frutas.html
@@ -24,49 +24,49 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Frutas/Maçã.png" alt="Maçã" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Frutas/Maçã.png" alt="Maçã" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Frutas/Abacaxi.png" alt="Abacaxi">
+      <img src="../../../Pictogramas/Imagens/Frutas/Abacaxi.png" alt="Abacaxi">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Frutas/Abacate.png" alt="Abacate">
+      <img src="../../../Pictogramas/Imagens/Frutas/Abacate.png" alt="Abacate">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Frutas/Morango.png" alt="Morango">
+      <img src="../../../Pictogramas/Imagens/Frutas/Morango.png" alt="Morango">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Frutas/Banana.png" alt="Banana">
+      <img src="../../../Pictogramas/Imagens/Frutas/Banana.png" alt="Banana">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Frutas/Kiwi.png" alt="Kiwi">
+      <img src="../../../Pictogramas/Imagens/Frutas/Kiwi.png" alt="Kiwi">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Frutas/Laranja.png" alt="Laranja">
+      <img src="../../../Pictogramas/Imagens/Frutas/Laranja.png" alt="Laranja">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Frutas/Manga.png" alt="Manga">
+      <img src="../../../Pictogramas/Imagens/Frutas/Manga.png" alt="Manga">
     </div>
 
     <div class="card blue">
@@ -74,7 +74,7 @@
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Frutas/Uva.png" alt="Uva">
+      <img src="../../../Pictogramas/Imagens/Frutas/Uva.png" alt="Uva">
     </div>
 
     </div>
