--- a/Pictogramas/menu geral/Higiene/Higiene.html
+++ b/Pictogramas/menu geral/Higiene/Higiene.html
@@ -24,57 +24,57 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../ink/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../ink/cam/cam.html">Câmera</a></li>
+      <li><a href="../../../ink/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../ink/calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../ink/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../ink/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../ink/videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Higiene/Escovar os dentes.png" alt="Escovar os dentes" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Higiene/Escovar os dentes.png" alt="Escovar os dentes" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Higiene/Lavar as mãos.png" alt="Lavar as mãos">
+      <img src="../../../Pictogramas/Imagens/Higiene/Lavar as mãos.png" alt="Lavar as mãos">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Higiene/Tomar banho.png" alt="Tomar banho">
+      <img src="../../../Pictogramas/Imagens/Higiene/Tomar banho.png" alt="Tomar banho">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Higiene/Pentear cabelo.png" alt="Pentear cabelo">
+      <img src="../../../Pictogramas/Imagens/Higiene/Pentear cabelo.png" alt="Pentear cabelo">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Higiene/Toalha.png" alt="Toalha">
+      <img src="../../../Pictogramas/Imagens/Higiene/Toalha.png" alt="Toalha">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Higiene/Vaso.png" alt="Vaso">
+      <img src="../../../Pictogramas/Imagens/Higiene/Vaso.png" alt="Vaso">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Higiene/Papel higiênico.png" alt="Papel higiênico">
+      <img src="../../../Pictogramas/Imagens/Higiene/Papel higiênico.png" alt="Papel higiênico">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Higiene/Lenço umedecido.png" alt="Lenço umedecido">
+      <img src="../../../Pictogramas/Imagens/Higiene/Lenço umedecido.png" alt="Lenço umedecido">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Higiene/Álcool.png" alt="Álcool">
+      <img src="../../../Pictogramas/Imagens/Higiene/Álcool.png" alt="Álcool">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Higiene/Unhas.png" alt="Unhas">
+      <img src="../../../Pictogramas/Imagens/Higiene/Unhas.png" alt="Unhas">
     </div>
 
     </div>
