--- a/Pictogramas/menu geral/Roupa/Roupas.html
+++ b/Pictogramas/menu geral/Roupa/Roupas.html
@@ -24,85 +24,85 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Camiseta.png" alt="Camiseta" class="card-image">
+      <img src="../../../Pictogramas/Imagens/Roupa/Camiseta.png" alt="Camiseta" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Calça.png" alt="Calça">
+      <img src="../../../Pictogramas/Imagens/Roupa/Calça.png" alt="Calça">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Shorts.png" alt="Shorts">
+      <img src="../../../Pictogramas/Imagens/Roupa/Shorts.png" alt="Shorts">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Meias.png" alt="Meias">
+      <img src="../../../Pictogramas/Imagens/Roupa/Meias.png" alt="Meias">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Tênis.png" alt="Tênis">
+      <img src="../../../Pictogramas/Imagens/Roupa/Tênis.png" alt="Tênis">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Vestido.png" alt="Vestido">
+      <img src="../../../Pictogramas/Imagens/Roupa/Vestido.png" alt="Vestido">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Saia.png" alt="Saia">
+      <img src="../../../Pictogramas/Imagens/Roupa/Saia.png" alt="Saia">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Blusa.png" alt="Blusa">
+      <img src="../../../Pictogramas/Imagens/Roupa/Blusa.png" alt="Blusa">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Casaco.png" alt="Casaco">
+      <img src="../../../Pictogramas/Imagens/Roupa/Casaco.png" alt="Casaco">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Cachecol.png" alt="Cachecol">
+      <img src="../../../Pictogramas/Imagens/Roupa/Cachecol.png" alt="Cachecol">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Boné.png" alt="Boné">
+      <img src="../../../Pictogramas/Imagens/Roupa/Boné.png" alt="Boné">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Chapéu.png" alt="Chapéu">
+      <img src="../../../Pictogramas/Imagens/Roupa/Chapéu.png" alt="Chapéu">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Biquini.png" alt="Biquini">
+      <img src="../../../Pictogramas/Imagens/Roupa/Biquini.png" alt="Biquini">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Calcinha.png" alt="Calcinha">
+      <img src="../../../Pictogramas/Imagens/Roupa/Calcinha.png" alt="Calcinha">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Sutiã.png" alt="Sutiã">
+      <img src="../../../Pictogramas/Imagens/Roupa/Sutiã.png" alt="Sutiã">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/Roupa/Cueca.png" alt="Cueca">
+      <img src="../../../Pictogramas/Imagens/Roupa/Cueca.png" alt="Cueca">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/Roupa/Chinelo.png" alt="Chinelo">
+      <img src="../../../Pictogramas/Imagens/Roupa/Chinelo.png" alt="Chinelo">
     </div>
 
     </div>
