--- a/Pictogramas/menu geral/DiaADia/DiaADia.html
+++ b/Pictogramas/menu geral/DiaADia/DiaADia.html
@@ -24,177 +24,177 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Gostar.png" alt="Gostar" class="card-image">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Gostar.png" alt="Gostar" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Pegar.png" alt="Pegar">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Pegar.png" alt="Pegar">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Fazer.png" alt="Fazer">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Fazer.png" alt="Fazer">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Bom.png" alt="Bom">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Bom.png" alt="Bom">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Ruim.png" alt="Ruim">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ruim.png" alt="Ruim">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Mais.png" alt="Mais">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Mais.png" alt="Mais">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Menos.png" alt="Menos">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Menos.png" alt="Menos">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Sim.png" alt="Sim">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Sim.png" alt="Sim">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Não.png" alt="Não">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Não.png" alt="Não">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Vir.png" alt="Vir">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Vir.png" alt="Vir">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Ir.png" alt="Ir">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ir.png" alt="Ir">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Olhar.png" alt="Olhar">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Olhar.png" alt="Olhar">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Virar.png" alt="Virar">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Virar.png" alt="Virar">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Ajuda.png" alt="Ajuda">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ajuda.png" alt="Ajuda">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Diferente.png" alt="Diferente">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Diferente.png" alt="Diferente">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Eu.png" alt="Eu">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Eu.png" alt="Eu">
     </div>
     
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Voce.png" alt="Você">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Voce.png" alt="Você">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Ele.png" alt="Ele">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ele.png" alt="Ele">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Ela.png" alt="Ela">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ela.png" alt="Ela">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Abrir.png" alt="Abrir">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Abrir.png" alt="Abrir">
       </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Ocupado.png" alt="Ocupado">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Ocupado.png" alt="Ocupado">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Colocar.png" alt="Colocar">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Colocar.png" alt="Colocar">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Igual.png" alt="Igual">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Igual.png" alt="Igual">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Este.png" alt="Este">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Este.png" alt="Este">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Aquele.png" alt="Aquele">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Aquele.png" alt="Aquele">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Acima.png" alt="Acima">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Acima.png" alt="Acima">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Tudo.png" alt="Tudo">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Tudo.png" alt="Tudo">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Algum.png" alt="Algum">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Algum.png" alt="Algum">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Aqui.png" alt="Aqui">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Aqui.png" alt="Aqui">
     </div>
     
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Dentro.png" alt="Dentro">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Dentro.png" alt="Dentro">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Em cima.png" alt="Em cima">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Em cima.png" alt="Em cima">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Posso.png" alt="Posso?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Posso.png" alt="Posso?">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Terminei.png" alt="Terminei">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Terminei.png" alt="Terminei">
       </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Onde.png" alt="Onde?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Onde.png" alt="Onde?">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Oque.png" alt="O que?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Oque.png" alt="O que?">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Por que.png" alt="Por que?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Por que.png" alt="Por que?">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Quem.png" alt="Quem?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Quem.png" alt="Quem?">
       </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Quando.png" alt="Quando?">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Quando.png" alt="Quando?">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/DiaADia/Pare.png" alt="Pare">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Pare.png" alt="Pare">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/DiaADia/Escutar.png" alt="Escutar">
+      <img src="../../../Pictogramas/Imagens/DiaADia/Escutar.png" alt="Escutar">
     </div>
 
 
