--- a/Pictogramas/menu geral/Saudacoes/Saudacoes.html
+++ b/Pictogramas/menu geral/Saudacoes/Saudacoes.html
@@ -24,45 +24,45 @@
         </div>
       </div>
       <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+      <li><a href="../../../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../../../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../../../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../../../cam/cam.html">Câmera</a></li>
+      <li><a href="../../../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../../../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../../../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../../../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../../../videos/videos.html">Vídeos</a></li>
       </ul>
     </nav>
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/saudações/Olá.png" alt="Olá" class="card-image">
+      <img src="../../../Pictogramas/Imagens/saudações/Olá.png" alt="Olá" class="card-image">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/saudações/Obrigado.png" alt="Obrigado">
+      <img src="../../../Pictogramas/Imagens/saudações/Obrigado.png" alt="Obrigado">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/saudações/Qual o seu nome.png" alt="Qual o seu nome">
+      <img src="../../../Pictogramas/Imagens/saudações/Qual o seu nome.png" alt="Qual o seu nome">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/saudações/Quantos anos você tem.png" alt="Quantos anos você tem">
+      <img src="../../../Pictogramas/Imagens/saudações/Quantos anos você tem.png" alt="Quantos anos você tem">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/saudações/Bom dia.png" alt="Bom dia">
+      <img src="../../../Pictogramas/Imagens/saudações/Bom dia.png" alt="Bom dia">
     </div>
 
     <div class="card pink">
-      <img src="/Pictogramas/Imagens/saudações/Boa tarde.png" alt="Boa tarde">
+      <img src="../../../Pictogramas/Imagens/saudações/Boa tarde.png" alt="Boa tarde">
     </div>
 
     <div class="card blue">
-      <img src="/Pictogramas/Imagens/saudações/Boa noite.png" alt="Boa noite">
+      <img src="../../../Pictogramas/Imagens/saudações/Boa noite.png" alt="Boa noite">
     </div>
 
     </div>
